Fix: fix instructions text so it aligns left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ p ,button{
 .instrucions-ol p{
     font-size: 1em;
     font-family: 'Times New Roman', Times, serif;
+    text-align: left;
 }
 
 #score-list li{
